...
        android:src="@drawable/bullet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/create_ingredient_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="95dp"
        android:ems="10"
        android:hint="Name and quantity"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/create_ingredient_unit"
        android:layout_width="75dp"
        android:layout_height="match_parent"
        android:background="@color/colorAccentLight"
        android:ems="10"
        android:hint="Units"
        android:inputType="textPersonName"
...
